[gd_scene load_steps=2 format=3 uid="uid://b8cnmn1j0dv7y"]

[ext_resource type="Script" uid="uid://lip0yjg6ikr8" path="res://scripts/permanent_upgrades.gd" id="1_k233l"]

[node name="UpgradesMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k233l")

[node name="Permanent Upgrades" type="Label" parent="."]
layout_mode = 0
offset_left = 446.0
offset_top = 58.0
offset_right = 486.0
offset_bottom = 81.0

[node name="GoldLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 642.0
offset_top = 59.0
offset_right = 682.0
offset_bottom = 82.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -231.0
offset_right = 421.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2

[node name="PurchaseHealthButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Purcahse +10 Max  Health (Cost: 50 gold)"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/PurchaseHealthButton" to="." method="_on_purchase_health_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
